fixes bug #228 - évolution fonctionnalité voir aussi vers d'autres theme trackers
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1205 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -268,3 +268,4 @@ GML.DragNDropExpand = Pour déposer rapidement un fichier...
 GML.DragNDropCollapse = Fermer
 
 GML.personalSpace = Espace personnel
+GML.linkTo = Référencer
