--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_de.properties
@@ -48,3 +48,8 @@ LireNotification = Benachrichtigungs-Box
 Notifier = Senden einer Benachrichtigung
 DeleteAllNotif = Alle empfangenen Benachrichtigungen l\u00F6schen
 ConfirmDeleteAllNotif = Sind Sie sicher, alle empfangenen Benachrichtigungen l\u00F6schen zu wollen?
+SendedUserNotifications = 
+DeleteAllSendedNotif = 
+ConfirmDeleteAllSendedNotif = 
+NameOfReceivers = 
+UserNotification = 
