--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -46,4 +46,9 @@ ParametrerNotification = Parameter
 LireNotification = Notification box
 Notifier = Send a notification
 DeleteAllNotif = Remove all messages
-ConfirmDeleteAllNotif = Do you really whant to delete all messages?
+ConfirmDeleteAllNotif = Do you really whant to delete all messages ?
+SendedUserNotifications = Sended notifications
+DeleteAllSendedNotif = Remove all messages
+ConfirmDeleteAllSendedNotif =  Do you really whant to delete all messages ?
+NameOfReceivers = This message is send to : 
+UserNotification = User Notification
