--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
@@ -84,6 +84,8 @@ TestSMTPExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine
 MesNotifications = Meine Benachrichtigungen
 ParametrerNotification = Parametrisierung
 LireNotification = Benachrichtigungs-Box
+SendedUserNotifications = 
+
 Notifier = Senden einer Benachrichtigung
 MessageSuppressionCanal = Sind Sie sicher, diesen Kanal l\u00F6schen zu wollen?
 MessageSuppressionRegle = Sind Sie sicher, diese Regel l\u00F6schen zu wollen?
