--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -84,6 +84,8 @@ TestSMTPExplanation = You have just tested the sending of a notification in mail
 MesNotifications = My notifications
 ParametrerNotification = Parameter
 LireNotification = Notification box
+SendedUserNotifications = Sended notifications
+
 Notifier = Send a notification
 MessageSuppressionCanal = Do you really want to delete this protocol?
 MessageSuppressionRegle = Do you really want to delete this guideline?
