--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
@@ -47,3 +47,8 @@ LireNotification = Boîte de notification
 Notifier = Envoi d'une notification
 DeleteAllNotif = Supprimer toutes les notifications recues
 ConfirmDeleteAllNotif = Etes-vous sur de vouloir supprimer toutes les notifications recues ?
+SendedUserNotifications = Notifications envoyées
+DeleteAllSendedNotif = Supprimer toutes mes notifications envoyées
+ConfirmDeleteAllSendedNotiff = Etes-vous sur de vouloir supprimer toutes les notifications envoyées ?
+NameOfReceivers = Ce message a été adressé à : 
+UserNotification = Notification manuelle
