--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_fr.properties
@@ -23,18 +23,18 @@
 #
 ConfirmDeleteMessage = Voulez-vous supprimer cette notification ?
 silverMail = Mes notifications
-onglet_inbox = Boîte de réception
+onglet_inbox = Bo\u00EEte de r\u00E9ception
 bbar1_path = Mes notifications
-bbar1_inbox = Boîte de réception
+bbar1_inbox = Bo\u00EEte de r\u00E9ception
 bbar2_popup = Message
-number = N°
+number = N\u00B0
 date=Date
 source = Source
 url = Lien
 from = De
 title = Titre
 name = Objet
-operation = Opération
+operation = Op\u00E9ration
 delete = Supprimer
 author = Auteur
 description = Message
@@ -42,13 +42,13 @@ subject = Sujet
 validate = Ok
 cancel = Annuler
 close = Fermer
-ParametrerNotification = Paramétrage
-LireNotification = Boîte de notification
+ParametrerNotification = Param\u00E9trage
+LireNotification = Bo\u00EEte de notification
 Notifier = Envoi d'une notification
 DeleteAllNotif = Supprimer toutes les notifications recues
 ConfirmDeleteAllNotif = Etes-vous sur de vouloir supprimer toutes les notifications recues ?
-SendedUserNotifications = Notifications envoyées
-DeleteAllSendedNotif = Supprimer toutes mes notifications envoyées
-ConfirmDeleteAllSendedNotiff = Etes-vous sur de vouloir supprimer toutes les notifications envoyées ?
-NameOfReceivers = Ce message a été adressé à : 
+SendedUserNotifications = Notifications envoy\u00E9es
+DeleteAllSendedNotif = Supprimer toutes mes notifications envoy\u00E9es
+ConfirmDeleteAllSendedNotiff = Etes-vous sur de vouloir supprimer toutes les notifications envoy\u00E9es ?
+NameOfReceivers = Ce message a \u00E9t\u00E9 adress\u00E9 \u00E0 :
 UserNotification = Notification manuelle
