Creation of PDC field closes feature #341
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1272 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -81,6 +81,7 @@ templateDesigner.newFieldUser = Add a 'User' field
 templateDesigner.newFieldLdap = Add a 'LDAP connector' field
 templateDesigner.newFieldAccessPath = Add an 'Access path' field
 templateDesigner.newFieldJdbc = Add a 'JDBC connector' field
+templateDesigner.newFieldPdc = Add a 'PDC' field
 
 templateDesigner.displayer = Displayer
 templateDesigner.operations = Operations
