--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -80,6 +80,7 @@ templateDesigner.newFieldUser = Ajouter un champ 'Utilisateur'
 templateDesigner.newFieldLdap = Ajouter un champ 'Connecteur LDAP'
 templateDesigner.newFieldAccessPath = Ajouter un champ 'Emplacement'
 templateDesigner.newFieldJdbc = Ajouter un champ 'Connecteur JDBC'
+templateDesigner.newFieldPdc = Ajouter un champ 'PDC'
 
 templateDesigner.displayer = Afficheur
 templateDesigner.operations = Opérations
