--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -53,6 +53,7 @@ pdcPeas.deleteArbo                     = Delete path
 
 pdcPeas.confirmDeleteArbo              = Are you sure you want to delete the path?
 pdcPeas.confirmDeleteValue             = Are you sure you want to delete this value?
+pdcPeas.confirmDeletePosition          = Are you sure you want to delete this position?
 pdcPeas.confirmDeleteAxis              = Are you sure you want to delete your selection?
 pdcPeas.confirmMoveValue	       = Are you sure you want to move this value and its content?
 
@@ -85,6 +86,10 @@ pdcPeas.classifyDelete                 = Delete selected position(s)
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = No position
 pdcPeas.rootValueNotAllowed	       = Root value is not authorized on following axis
+pdcPeas.addPosition                    = Add a position
+pdcPeas.editPosition                   = Edit the position
+pdcPeas.deletePosition                 = Delete the position
+pdcPeas.deletedPosition                = Position deleted
 
 pdcPeas.path                           = Path
 pdcPeas.variant                        = Variant
@@ -103,6 +108,7 @@ pdcPeas.emptyName                      = The field ' Name ' is required
 
 pdcPeas.paramPdcPeas                   = Classification settings
 pdcPeas.paramChooseAxis                = Select an axis to be used
+pdcPeas.selectAxis                     = Select at least one axis.
 pdcPeas.errorMessage                   = An ascending or downward value with the selected one was already selected as the basic value
 pdcPeas.positionExist                  = You cannot change your basic value.
 pdcPeas.paramUsedAxis		       = Settings
