--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -53,6 +53,7 @@ pdcPeas.deleteArbo                     = Supprimer le chemin
 
 pdcPeas.confirmDeleteArbo              = Êtes-vous sûr de vouloir supprimer le chemin ?
 pdcPeas.confirmDeleteValue             = Êtes-vous sûr de vouloir supprimer la valeur ?
+pdcPeas.confirmDeletePosition          = Êtes-vous sûr de vouloir supprimer la position ?
 pdcPeas.confirmDeleteAxis              = Êtes-vous sûr de vouloir supprimer votre sélection ?
 pdcPeas.confirmMoveValue			   = Etes-vous sûr de vouloir déplacer cette valeur et tout ce qu'elle contient ?
 
@@ -86,6 +87,10 @@ pdcPeas.classifyDelete                 = Supprimer la ou les positions sélection
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = Aucune position
 pdcPeas.rootValueNotAllowed			   = La valeur racine n'est pas autorisée pour les axes suivants
+pdcPeas.addPosition                    = Ajouter une position
+pdcPeas.editPosition                   = Modifier la position
+pdcPeas.deletePosition                 = Supprimer la position
+pdcPeas.deletedPosition                = Position supprimée
 
 pdcPeas.path                           = Chemin
 pdcPeas.variant                        = Variant
@@ -104,6 +109,7 @@ pdcPeas.emptyName                      = Le champ ' Nom ' est obligatoire
 
 pdcPeas.paramPdcPeas                   = Paramétrer l'utilisation
 pdcPeas.paramChooseAxis                = Choisir un axe de classement
+pdcPeas.selectAxis                     = Choisir au moins un axe.
 pdcPeas.errorMessage                   = Une valeur ascendante ou descendante à la valeur sélectionnée a déjà été choisie comme valeur de base
 pdcPeas.positionExist                  = Vous ne pouvez changer votre valeur de base.
 pdcPeas.paramUsedAxis        				   = Paramétrage
