--- a/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
@@ -85,3 +85,8 @@ form.EX_CANT_EXECUTE_QUERY_JDBC = Impossible to execute request
 form.EX_CANT_BROWSE_RESULT_JDBC = Impossible to browse request results
 
 form.EXP_UPDATE             = Impossible to update the field
+
+form.EX_CANT_GET_AXIS_DETAIL = Failed to get the detail of axis #
+form.EX_CANT_GET_AXIS_VALUE = Failed to get the axis value (valueId ; treeId) :
+form.EX_CANT_GET_AXIS_VALUES = Failed to get values of axis #
+form.EX_CANT_GET_FULL_PATH = Failed to get the full path of the axis value (valueId ; treeId) :
