--- a/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_fr.properties
@@ -85,3 +85,8 @@ form.EX_CANT_EXECUTE_QUERY_JDBC = Impossible d'exécuter la requête
 form.EX_CANT_BROWSE_RESULT_JDBC = Impossible de parcourir les résultats de la requête
 
 form.EXP_UPDATE             = Impossible de mettre à jour le champ
+
+form.EX_CANT_GET_AXIS_DETAIL = Impossible de récupérer le detail de l'axe #
+form.EX_CANT_GET_AXIS_VALUE = Impossible de récupérer la valeur de l'axe (valueId ; treeId) :
+form.EX_CANT_GET_AXIS_VALUES = Impossible de récupérer les valeurs de l'axe #
+form.EX_CANT_GET_FULL_PATH = Impossible de récupérer le chemin complet de la valeur de l'axe (valueId ; treeId) :
