closing feature #294. Adding parameter to setup receivers inclusion in body of notifications.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1281 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_en.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-ConfirmDeleteMessage = Do you really whant to delete this message ?
+ConfirmDeleteMessage = Do you really want to delete this message ?
 silverMail = My notifications
 onglet_inbox = Inbox
 bbar1_path = My notifications
@@ -46,9 +46,9 @@ ParametrerNotification = Parameter
 LireNotification = Notification box
 Notifier = Send a notification
 DeleteAllNotif = Remove all messages
-ConfirmDeleteAllNotif = Do you really whant to delete all messages ?
+ConfirmDeleteAllNotif = Do you really want to delete all messages ?
 SendedUserNotifications = Sended notifications
 DeleteAllSendedNotif = Remove all messages
-ConfirmDeleteAllSendedNotif =  Do you really whant to delete all messages ?
-NameOfReceivers = This message is send to : 
+ConfirmDeleteAllSendedNotif =  Do you really want to delete all messages ?
+NameOfReceivers = This message has been sent to : 
 UserNotification = User Notification
