closing feature #231. Making some minor enhancement on inserted html code. Changing method to get files stores (same as Gallery).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1311 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_en.properties
@@ -46,7 +46,7 @@ UploadTitle = File upload
 Valider = Ok
 Annuler = Cancel
 DynamicValues = Choose a keyword
-storageFile.select.title = Choose a storage file
+storageFile.select.title = Files stores
 storageFile.home.title = Attachment link management
 storageFile.home.description = Please use the left side menu to display attachments.
 storageFile.icon.alt=Insert attachment link
