--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_fr.properties
@@ -46,7 +46,7 @@ UploadTitle = Upload de fichier
 Valider = Valider
 Annuler = Annuler
 DynamicValues = Sélectionner un mot-clé
-storageFile.select.title = Sélectionner une banque de fichier
-storageFile.home.title = Gestion des liens vers des pieces jointes
+storageFile.select.title = Banques de fichiers
+storageFile.home.title = Gestion des liens vers des pièces jointes
 storageFile.home.description = Veuillez utiliser le menu latéral gauche pour afficher les pièces jointes.
 storageFile.icon.alt=Insérer des pièces jointes
