Escaping with unicode chars
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1359 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
@@ -21,13 +21,13 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JDP.class = Classe Java utilisée
+JDP.class = Classe Java utilis\u00E9e
 
 JDP.domainAdd = Ajouter un domaine
 JDP.domainSQLAdd = Ajouter un domaine SQL
 JDP.domainDel = Supprimer le domaine
 JDP.domainSQLDel = Supprimer le domaine SQL
-JDP.domainDelConfirm = Etes-vous s&ucirc;r de vouloir supprimer ce domaine ?\\nAttention, ceci supprimera tous les utilisateurs et tous les groupes de ce domaine.
+JDP.domainDelConfirm = Etes-vous s\u00FBr(e) de vouloir supprimer ce domaine ?\\nAttention, ceci supprimera tous les utilisateurs et tous les groupes de ce domaine.
 JDP.domainMixt = Domaine mixte
 JDP.domainUpdate = Editer le domaine
 JDP.domainSQLUpdate = Editer le domaine SQL
@@ -35,15 +35,15 @@ JDP.domainSynchro = Synchroniser le domaine
 JDP.domainSynchroReport = Rapport de la synchronisation du domaine
 JDP.domains = Domaines
 JDP.domaine = Domaine
-JDP.silverpeasServerURL = URL d'accès au serveur Silverpeas
+JDP.silverpeasServerURL = URL d'acc\u00E8s au serveur Silverpeas
 JDP.silverpeasServerURLEx = (ex : 'http://myextranet.mydomain.com')
 
-JDP.jobDomain = Référentiel
+JDP.jobDomain = R\u00E9f\u00E9rentiel
 
 JDP.userPanelDomain = Gestion du domaine
 JDP.userPanelGroup = Gestion du groupe
 
-JDP.groupAdd = Créer un groupe
+JDP.groupAdd = Cr\u00E9er un groupe
 JDP.groupDel = Supprimer
 JDP.groupDelConfirm = Etes-vous s&ucirc;r de vouloir supprimer ce groupe ?
 JDP.groupImport = Importer un groupe
@@ -59,19 +59,19 @@ JDP.minLength = ' doit contenir au moins
 JDP.noSpaces = ' ne doit pas contenir d'espace
 
 JDP.name=Nom
-JDP.synchroRule = Règle de synchronisation
-JDP.synchroRuleAvail = Règles de synchronisation disponibles
-JDP.synchroRuleInfo = <table><tr><td nowrap valign=top><b>DS_AccessLevel = *</b></td><td>Tous les utilisateurs</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = A</b></td><td>Tous les administrateurs</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = D</b></td><td>Tous les administrateurs de domaine</td></tr><tr><td valign=top nowrap><b>DC_<i>propriété</i> = <i>valeur</i></b></td><td>Tous les utilisateurs vérifiant l'égalité (domaines SQL et LDAP)</td></tr></table>
+JDP.synchroRule = R\u00E8gle de synchronisation
+JDP.synchroRuleAvail = R\u00E8gles de synchronisation disponibles
+JDP.synchroRuleInfo = <table><tr><td nowrap valign=top><b>DS_AccessLevel = *</b></td><td>Tous les utilisateurs</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = A</b></td><td>Tous les administrateurs</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = D</b></td><td>Tous les administrateurs de domaine</td></tr><tr><td valign=top nowrap><b>DC_<i>propri\u00E9t\u00E9</i> = <i>valeur</i></b></td><td>Tous les utilisateurs v\u00E9rifiant l'\u00E9galit\u00E9 (domaines SQL et LDAP)</td></tr></table>
 
-JDP.properties = Properties de paramétrage
+JDP.properties = Properties de param\u00E9trage
 
 JDP.serverAuthentification = Properties d'authentification
-JDP.serverTimeStamp = Dernier indice LDAP synchronisé (uSNChanged)
+JDP.serverTimeStamp = Dernier indice LDAP synchronis\u00E9 (uSNChanged)
 JDP.silverPassword = Mot de passe Silverpeas
 JDP.synchroEnCours = Synchronisation du domaine en cours...
 
 JDP.userAdd = Ajouter un utilisateur
-JDP.userCreate = Créer un utilisateur
+JDP.userCreate = Cr\u00E9er un utilisateur
 JDP.csvImport = Importer via fichier CSV
 JDP.csvFile = Fichier CSV
 JDP.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
@@ -79,10 +79,10 @@ JDP.ligne = - Ligne
 JDP.colonne = Colonne
 JDP.valeur = Valeur
 JDP.obligatoire = Ce champ est obligatoire
-JDP.nbCarMax = La valeur ne doit pas dépasser
+JDP.nbCarMax = La valeur ne doit pas d\u00E9passer
 JDP.nbCarMin = La valeur doit comporter au moins
-JDP.caracteres = caractères
-JDP.existingLogin = Ce login est déjà utilisé
+JDP.caracteres = caract\u00E8res
+JDP.existingLogin = Ce login est d\u00E9j\u00E0 utilis\u00E9
 JDP.valeursPossibles = Les valeurs possibles sont : 'Admin', 'AdminPdc', 'AdminDomain', 'User' ou 'Guest'
 JDP.userDel = Supprimer un utilisateur
 JDP.userDelConfirm = Etes-vous s&ucirc;r de vouloir supprimer cet utilisateur ?
@@ -95,7 +95,7 @@ JDP.userSynchro = Synchroniser un utilisateur
 JDP.userUnsynchro = Supprimer la synchronisation d'un utilisateur
 JDP.userUpdate = Editer les informations de l'utilisateur
 
-JDP.welcome =  Bienvenue sur le module Référentiel
+JDP.welcome =  Bienvenue sur le module R\u00E9f\u00E9rentiel
 
 JDP.traceLevel = Niveau de trace
 
@@ -104,20 +104,20 @@ JDP.conseilTXT 	= Pour sauvegarder au format texte (CSV par exemple), utiliser l
 JDP.userCryptPasswords = Encrypter les mots de passes des utilisateurs
 JDP.LaunchEncrypt = Lancer le cryptage des mots de passes en clair
 
-JDP.getX509 = Créer un certificat X509
+JDP.getX509 = Cr\u00E9er un certificat X509
 
 JDP.roleManager = Gestionnaires
 JDP.GroupManagersUpdate = Modifier les gestionnaires du groupe
 JDP.GroupManagersDelete = Supprimer tous les gestionnaires du groupe
-JDP.GroupManagersDeleteConfirmation = Etes-vous sûr(e) de vouloir supprimer tous les gestionnaires du groupe ?
+JDP.GroupManagersDeleteConfirmation = Etes-vous s\u00FBr(e) de vouloir supprimer tous les gestionnaires du groupe ?
 
-JDP.usersFound = utilisateur(s) trouvé(s)
+JDP.usersFound = utilisateur(s) trouv\u00E9(s)
 JDP.inProgress = Recherche en cours !<BR/>Veuillez patienter...
 JDP.LDAPField = Champ LDAP
 JDP.searchSyntax = Aide
 JDP.fieldSyntax = Syntaxe de recherche
-JDP.fieldSyntaxContent = Possibilité d'utiliser la troncature *
+JDP.fieldSyntaxContent = Possibilit\u00E9 d'utiliser la troncature *
 JDP.importAll = Importer tous les utilisateurs
-JDP.importSelected = Importer les utilisateurs sélectionnés
+JDP.importSelected = Importer les utilisateurs s\u00E9lectionn\u00E9s
 
 
