--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_fr.properties
@@ -21,10 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-JMP.backSilverpeas = Retour à Silverpeas
+JMP.backSilverpeas = Retour \u00E0 Silverpeas
 
-JMP.exit = Se déconnecter
-JMP.feedback = Ecrire à l'administrateur
+JMP.exit = Se d\u00E9connecter
+JMP.feedback = Ecrire \u00E0 l'administrateur
 JMP.help = Aide
 JMP.tools = Outils
 JMP.clipboard = Presse-Papier
@@ -34,7 +34,7 @@ JKM = Plan de Classement
 JSTAT = Statistiques
 JTOOLS = Outils
 
-JDP = Référentiel
+JDP = R\u00E9f\u00E9rentiel
 JSPP = Gestion d'espaces
 JRP = Profil
 JMAP = Maintenance
@@ -45,12 +45,12 @@ portlets = Portlets
 JKM1 = Axes
 JKM2 = Synonymes
 JSTAT1 = Connexions
-JSTAT2 = Accès
+JSTAT2 = Acc\u00E8s
 JSTAT3 = Volumes
 
 JBKP = Sauvegarde
 
-JRI = Import Répertoire
+JRI = Import R\u00E9pertoire
 JIE = Moteur d'importation
 JSA = Gestion des IP
 JWD = Workflows
@@ -62,4 +62,4 @@ JMAP = Maintenance
 JMAP.header1 = Gestion globale du mode Maintenance
 JMAP.maintenanceOnAir = L'application est actuellement en mode maintenance....
 JMAP.active = Activer
-JMAP.desactive = Désactiver
+JMAP.desactive = D\u00E9sactiver
