Escaping with unicode chars
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1360 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -22,48 +22,48 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-FrenchLanguage = Français
+FrenchLanguage = Fran\u00E7ais
 GermanLanguage = Deutsch
 EnglishLanguage = English
-language_fr = Français
+language_fr = Fran\u00E7ais
 language_de = Allemand
 language_en = Anglais
-PersonalizationTitleTab1 = Personnaliser > Préférences
+PersonalizationTitleTab1 = Personnaliser > Pr\u00E9f\u00E9rences
 PersonalizationTitleTab2 = Personnaliser > Modifier mon profil
 
 FavoriteLanguage = Langue
-FavoriteLook = Modèle
+FavoriteLook = Mod\u00E8le
 Language = Langue
 Look = Apparence
-DefaultWorkSpace = Espace par défaut
-Preferences = Préférences
-Identity = Identité
+DefaultWorkSpace = Espace par d\u00E9faut
+Preferences = Pr\u00E9f\u00E9rences
+Identity = Identit\u00E9
 
-Thesaurus = Activer le thésaurus
+Thesaurus = Activer le th\u00E9saurus
 Activate = Activer
-Deactivate = Désactiver
+Deactivate = D\u00E9sactiver
 
-DragDrop = Activer le glisser/déposer
+DragDrop = Activer le glisser/d\u00E9poser
 
-WebdavEditing = Activer l'édition en ligne
-WebdavEditing.installation = Installation du module d'édition en ligne Webdav
+WebdavEditing = Activer l'\u00E9dition en ligne
+WebdavEditing.installation = Installation du module d'\u00E9dition en ligne Webdav
 
 operationPane_addadress = Ajouter un canal de notification
-operationPane_paramnotif = Editer les règles
-operationPane_addguideline = Ajouter une règle
+operationPane_paramnotif = Editer les r\u00E8gles
+operationPane_addguideline = Ajouter une r\u00E8gle
 
-arrayPane_Default = Par défaut
+arrayPane_Default = Par d\u00E9faut
 arrayPane_Nom = Canal
 arrayPane_Type = Type
 arrayPane_Usage = Usage
 arrayPane_Adresse = Contact
-arrayPane_Operations = Opérations
+arrayPane_Operations = Op\u00E9rations
 
-iconPane_Default = Fixer par défaut
+iconPane_Default = Fixer par d\u00E9faut
 iconPane_Test = Tester
 
 browseBar_Path2 = Ajout d'un canal de notification
-browseBar_Path3 = Règles
+browseBar_Path3 = R\u00E8gles
 browseBar_Path4 = Modification du canal de notification
 
 type= Type
@@ -72,37 +72,37 @@ adresse = Contact
 composant = Service
 notif_type = Type de notification
 dest = Moyen
-default = Par défaut
+default = Par d\u00E9faut
 
-UndefinedFavoriteSpace = Indéfini
+UndefinedFavoriteSpace = Ind\u00E9fini
 
-TestPopUpExplanation = Vous venez de tester l'envoi d'une notification dans une fenêtre. Si le test a réussi, une fenêtre de votre navigateur devrait s'ouvrir.
-TestSilverMailExplanation = Vous venez de tester l'envoi d'une notification dans la boîte de notification. Si le test a réussi, vous devriez avoir reçu une notification dans votre boite de notification.
-TestSMTPExplanation = Vous venez de tester l'envoi d'une notification dans une messagerie. Si le test a réussi, vous devriez avoir reçu un message dans votre messagerie externe.
+TestPopUpExplanation = Vous venez de tester l'envoi d'une notification dans une fen\u00EAtre. Si le test a r\u00E9ussi, une fen\u00EAtre de votre navigateur devrait s'ouvrir.
+TestSilverMailExplanation = Vous venez de tester l'envoi d'une notification dans la bo\u00EEte de notification. Si le test a r\u00E9ussi, vous devriez avoir re\u00E7u une notification dans votre boite de notification.
+TestSMTPExplanation = Vous venez de tester l'envoi d'une notification dans une messagerie. Si le test a r\u00E9ussi, vous devriez avoir re\u00E7u un message dans votre messagerie externe.
 
 MesNotifications = Mes notifications
-ParametrerNotification = Paramétrage
-LireNotification = Boîte de notification
-SendedUserNotifications = Notifications envoyées
+ParametrerNotification = Param\u00E9trage
+LireNotification = Bo\u00EEte de notification
+SendedUserNotifications = Notifications envoy\u00E9es
 
 Notifier = Envoi d'une notification
-MessageSuppressionCanal = Etes-vous sûr de vouloir supprimer ce canal ?
-MessageSuppressionRegle = Etes-vous sûr de vouloir supprimer cette règle ?
+MessageSuppressionCanal = Etes-vous s\u00FBr de vouloir supprimer ce canal ?
+MessageSuppressionRegle = Etes-vous s\u00FBr de vouloir supprimer cette r\u00E8gle ?
 
 UserRights = Droits
 OldPassword = Ancien mot de passe
 NewPassword = Nouveau mot de passe
 NewPasswordConfirm = Confirmation du nouveau mot de passe
 WrongNewPwd = La confirmation du mot de passe est incorrecte...
-MessageOK = Votre profil a été mis à jour avec succès...
+MessageOK = Votre profil a \u00E9t\u00E9 mis \u00E0 jour avec succ\u00E8s...
 Error_bad_credential = Votre mot de passe est incorrect
 Error_unknown = Impossible de modifier votre profil, veuillez contacter votre administrateur
 ModifyPasswordNotAllowed1 = Vous ne pouvez pas modifier ici votre mot de passe.
 ModifyPasswordNotAllowed2 = Contactez votre administrateur...
-LengthPwdLabel = caractères minimum
+LengthPwdLabel = caract\u00E8res minimum
 WrongLength = La longueur du mot de passe est insuffisante !
 NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
 
-PP.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas imposé
+PP.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
 LoginQuestion = Question en cas d'oubli de mot de passe
-LoginAnswer = Réponse à la question
+LoginAnswer = R\u00E9ponse \u00E0 la question
