--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -21,7 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// bouton, action, tableau ...
+
+# bouton, action, tableau ...
+
+
 GML.add							= Ajouter
 GML.address 						= Adresse
 GML.admin						= Gestionnaire
@@ -34,7 +37,7 @@ GML.agenda 						= Agenda
 GML.attachments 					= Fichiers joints
 GML.author						= Auteur
 GML.publisher						= Publieur
-GML.affichierCalendrier                                 = Afficher le calendrier
+GML.affichierCalendrie  = Afficher le calendrier
 
 GML.export						= Exporter
 GML.import						= Importer
@@ -42,21 +45,21 @@ GML.import						= Importer
 GML.back						= Retour
 
 GML.cancel						= Annuler
-GML.categories 						= Catégories
-GML.category	 					= Catégorie
-GML.cellularPhoneNumber 	                        = Tél. mobile
+GML.categories 						= Cat\u00E9gories
+GML.category	 					= Cat\u00E9gorie
+GML.cellularPhoneNumber 	                        = T\u00E9l. mobile
 GML.close						= Fermer
-GML.company 						= Société
+GML.company 						= Soci\u00E9t\u00E9
 GML.component                                           = KM Service
 GML.copy 						= Copier
-GML.create						= Créer
-GML.createPublication			                = Créer une publication
-GML.createTheme						= Créer un thème
+GML.create						= Cr\u00E9er
+GML.createPublication			                = Cr\u00E9er une publication
+GML.createTheme						= Cr\u00E9er un th\u00E8me
 GML.cut							= Couper
-GML.generatePDF						= Générer un PDF
+GML.generatePDF						= G\u00E9n\u00E9rer un PDF
 
 GML.date						= Date
-GML.dateBegin 						= Date de début 
+GML.dateBegin 						= Date de d\u00E9but
 GML.dateEnd 						= Date de fin
 GML.day							= Jour
 GML.delete						= Supprimer
@@ -66,7 +69,7 @@ GML.detail						= D&eacute;tail
 GML.domain						= Espace
 GML.domainManager				= Gestionnaire de domaine
 GML.domains						= Espaces
-GML.download						= Téléchargement
+GML.download						= T\u00E9l\u00E9chargement
 
 GML.eMail 						= E-mail
 GML.empty                                               = Vide
@@ -76,21 +79,21 @@ GML.errors						= Erreurs
 
 GML.faxNumber 						= Fax
 GML.file						= Fichier
-GML.firstName                                           = Prénom
+GML.firstName                                           = Pr\u00E9nom
 
 GML.groupe						= Groupe
 GML.groupes						= Groupes
 GML.guest						= Invite
 
-GML.head						= Entête
+GML.head						= Ent\u00EAte
 GML.help						= Aide
-GML.homePhoneNumber 			                = Tél. domicile
+GML.homePhoneNumber 			                = T\u00E9l. domicile
 
-GML.insertHere						= Insérer ici
+GML.insertHere						= Ins\u00E9rer ici
 
 GML.jobPeas						= Service
 
-GML.keyWords						= Mots clés
+GML.keyWords						= Mots cl\u00E9s
 GML.kmmanager                   = Gestionnaire du Plan de Classement
 
 GML.label						= Libell&eacute;
@@ -128,15 +131,15 @@ GML.order					        = Ordre
 GML.password 						= Mot de passe
 GML.paste						= Coller
 GML.path						= Emplacement
-GML.phoneNumber 					= Téléphone
+GML.phoneNumber 					= T\u00E9l\u00E9phone
 GML.position 						= Poste
 GML.public 						= Publique
-GML.preview						= Prévisualisation
-GML.previous						= Précédent
+GML.preview						= Pr\u00E9visualisation
+GML.previous						= Pr\u00E9c\u00E9dent
 GML.print						= Imprimer
-GML.priority 						= Priorité
-GML.privateFS 						= Privée
-GML.privateMS 						= Privé
+GML.priority 						= Priorit\u00E9
+GML.privateFS 						= Priv\u00E9e
+GML.privateMS 						= Priv\u00E9
 GML.publication						= Publication
 GML.publications					= Publications
 GML.publish						= Publier
@@ -148,19 +151,19 @@ GML.size						= Taille
 GML.space						= Espace
 GML.status						= Etat
 GML.subscription					= Abonnement
-GML.shrink						= Réduire
-GML.surname						= Prénom
-GML.selection						= Sélection
-GML.select						= Sélectionnez...
+GML.shrink						= R\u00E9duire
+GML.surname						= Pr\u00E9nom
+GML.selection						= S\u00E9lection
+GML.select						= S\u00E9lectionnez...
 
-GML.toSelect						= Sélectionner
+GML.toSelect						= S\u00E9lectionner
 GML.theField						= le champ
-GML.theme						= Thème
+GML.theme						= Th\u00E8me
 GML.title						= Titre
 GML.type						= Type
 
 GML.unlock					        = D&eacute;v&eacute;rouiller
-GML.upload						= Téléchargement
+GML.upload						= T\u00E9l\u00E9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
 
@@ -169,13 +172,13 @@ GML.viewCalendar					= Afficher le calendrier
 GML.calendar = Calendrier
 GML.week						= Semaine
 
-GML.year 						= Année
+GML.year 						= Ann\u00E9e
 GML.yes						        = Oui
 
-// Titre fenêtre
+// Titre fen\u00EAtre
 GML.popupTitle						= ___/ Silverpeas&#153; - Collaborative Portal Organizer \\_________________________________________
 
-GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits réservés
+GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00E9serv\u00E9s
 
 // Formulaire
 GML.thefield						= Le champ
@@ -208,43 +211,43 @@ GML.shortJour7 = S
 GML.shortJour1 = D
 
 GML.mois0 = Janvier
-GML.mois1 = Février
+GML.mois1 = F\u00E9vrier
 GML.mois2 = Mars
 GML.mois3 = Avril
 GML.mois4 = Mai
 GML.mois5 = Juin
 GML.mois6 = Juillet
-GML.mois7 = Août
+GML.mois7 = Ao\u00FBt
 GML.mois8 = Septembre
 GML.mois9 = Octobre
 GML.mois10 = Novembre
-GML.mois11 = Décembre
+GML.mois11 = D\u00E9cembre
 
-//Contrôle JavaScript
+//Contr\u00F4le JavaScript
 GML.ThisFormContains = Ce formulaire contient 
-GML.MustBeFilled = doit être renseigné
+GML.MustBeFilled = doit \u00EAtre renseign\u00E9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
 GML.MustContainsCorrectDate = doit contenir une date
-GML.MustContainsPostDateTo = doit contenir une date postérieure à
-GML.MustContainsPostOrEqualDateTo = doit contenir une date postérieure ou égale à
-GML.MustContainsPostDate = doit contenir une date postérieure à aujourd'hui
+GML.MustContainsPostDateTo = doit contenir une date post\u00E9rieure \u00E0
+GML.MustContainsPostOrEqualDateTo = doit contenir une date post\u00E9rieure ou \u00E9gale \u00E0
+GML.MustContainsPostDate = doit contenir une date post\u00E9rieure \u00E0 aujourd'hui
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
 
 //Plan de classement
 GML.PDC = Plan de Classement
-GML.PDCParam = Paramétrer l'utilisation du PDC
-GML.PDCNewPosition = Créer une nouvelle position
-GML.PDCDeletePosition = Supprimer la ou les positions sélectionnée(s)
+GML.PDCParam = Param\u00E9trer l'utilisation du PDC
+GML.PDCNewPosition = Cr\u00E9er une nouvelle position
+GML.PDCDeletePosition = Supprimer la ou les positions s\u00E9lectionn\u00E9e(s)
 
-//Contrôles d'accès
-GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour accéder à l'information désirée !
+//Contr\u00F4les d'acc\u00E8s
+GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00E9der \u00E0 l'information d\u00E9sir\u00E9e !
 GML.DocumentNotFound = L'information que vous souhaitez consulter n'existe plus !
 
-GML.creationDate = Créé le
-GML.updateDate = Modifié le
+GML.creationDate = Cr\u00E9\u00E9 le
+GML.updateDate = Modifi\u00E9 le
 
 GML.language = Langue
 GML.translationRemove = Supprimer cette traduction
@@ -255,17 +258,17 @@ GML.ligne = - Ligne
 GML.colonne = Colonne
 GML.valeur = Valeur
 GML.obligatoire = Ce champ est obligatoire
-GML.nbCarMax = La valeur ne doit pas dépasser
+GML.nbCarMax = La valeur ne doit pas d\u00E9passer
 GML.nbCarMin = La valeur doit comporter au moins
-GML.caracteres = caractères
+GML.caracteres = caract\u00E8res
 GML.errorCsvFile = Erreur, on ne peut uploader que des fichiers d'extension .csv
 //Export CSV
-GML.ExportSucceeded = Export réussi.
-GML.ExportFailed = L'export a échoué.
+GML.ExportSucceeded = Export r\u00E9ussi.
+GML.ExportFailed = L'export a \u00E9chou\u00E9.
 GML.ExportInProgress = Export en cours...
 
-GML.DragNDropExpand = Pour déposer rapidement un fichier...
+GML.DragNDropExpand = Pour d\u00E9poser rapidement un fichier...
 GML.DragNDropCollapse = Fermer
 
 GML.personalSpace = Espace personnel
-GML.linkTo = Référencer
+GML.linkTo = R\u00E9f\u00E9rencer
