--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/multilang/peasCoreBundle_fr.properties
@@ -20,16 +20,12 @@
 #
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-#
-#  Messages used in peasCore 
-#
 
 #  SessionManager
-EndOfSessionNotificationMsgTitle=Fin de session à
-EndOfSessionNotificationMsgText=Sans réponse de votre part, le système terminera votre session !
+EndOfSessionNotificationMsgTitle=Fin de session \u00E0
+EndOfSessionNotificationMsgText=Sans r\u00E9ponse de votre part, le syst\u00E8me terminera votre session !
 administrator=Administrateur
 passwordExpirationAlert=Expiration de votre mot de passe imminente
-passwordExpirationMessage=Votre mot de passe arrive bientôt à expiration. Veuillez le changer dès que possible.
+passwordExpirationMessage=Votre mot de passe arrive bient\u00F4t \u00E0 expiration. Veuillez le changer d\u00E8s que possible.
 badCredentials=Mot de passe incorrect
-invalidAnswer=Réponse incorrecte
+invalidAnswer=R\u00E9ponse incorrecte
