--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_fr.properties
@@ -22,48 +22,48 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 silverStatisticsPeas.ip                          = Adresse IP
-silverStatisticsPeas.duration                    = Durée
+silverStatisticsPeas.duration                    = Dur\u00E9e
 silverStatisticsPeas.organisation                = Organisation
 silverStatisticsPeas.group                       = Groupe
 silverStatisticsPeas.conseilTXT 		 = Pour sauvegarder au format texte (CSV par exemple), utiliser la fonction Enregistrer sous du menu Fichier avec texte comme type.
-silverStatisticsPeas.since                       = Depuis début
-silverStatisticsPeas.to                          = Jusqu'à fin
+silverStatisticsPeas.since                       = Depuis d\u00E9but
+silverStatisticsPeas.to                          = Jusqu'\u00E0 fin
 silverStatisticsPeas.filter                      = Filtre
 silverStatisticsPeas.connectionNumber            = Nombre de connexions
 silverStatisticsPeas.export                      = Exporter
-silverStatisticsPeas.openUserPanelPeas           = Accéder au panneau d'utilisateurs
+silverStatisticsPeas.openUserPanelPeas           = Acc\u00E9der au panneau d'utilisateurs
 silverStatisticsPeas.statistics                  = Statistiques
-silverStatisticsPeas.RefreshedEveryMinutes       = Liste actualisée toutes les minutes
+silverStatisticsPeas.RefreshedEveryMinutes       = Liste actualis\u00E9e toutes les minutes
 silverStatisticsPeas.CloseSession                = Fermer la session
 silverStatisticsPeas.NotifyUser                  = Notifier l'utilisateur par popup
 silverStatisticsPeas.Actions                     = Actions
 silverStatisticsPeas.ConfirmKickSession          = Confirmez-vous la suppression de la session de l'utilisateur :
-silverStatisticsPeas.durationAvg                 = Durée moyenne
-silverStatisticsPeas.usersWithSession		 = Utilisateurs connectés
-silverStatisticsPeas.notifyAllUser		 = Notifier tous les utilisateurs connectés
+silverStatisticsPeas.durationAvg                 = Dur\u00E9e moyenne
+silverStatisticsPeas.usersWithSession		 = Utilisateurs connect\u00E9s
+silverStatisticsPeas.notifyAllUser		 = Notifier tous les utilisateurs connect\u00E9s
 silverStatisticsPeas.AuthorMessage		 = Message 
-silverStatisticsPeas.connectionFrequence         = Fréquence de connexions
-silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Nombre d'utilisateurs distincts connectés
+silverStatisticsPeas.connectionFrequence         = Fr\u00E9quence de connexions
+silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Nombre d'utilisateurs distincts connect\u00E9s
 silverStatisticsPeas.Connections 		 = Connexions
 silverStatisticsPeas.LoginNumber 		 = Nombre de connexions
-silverStatisticsPeas.AccessNumber	 	 = Répartition des accès
-silverStatisticsPeas.ToSpace	 	 	 = à l'espace
+silverStatisticsPeas.AccessNumber	 	 = R\u00E9partition des acc\u00E8s
+silverStatisticsPeas.ToSpace	 	 	 = \u00E0 l'espace
 silverStatisticsPeas.JobPeas	 	 	 = Services
-silverStatisticsPeas.ServicesNumber	 	 = Répartition par type de services
+silverStatisticsPeas.ServicesNumber	 	 = R\u00E9partition par type de services
 silverStatisticsPeas.InstancesNumber	 	 = Nombre d'instances
-silverStatisticsPeas.VolumeNumber	 	 = Répartition des publications
-silverStatisticsPeas.VolumeDocsNumber	 	 = Répartition des fichiers joints
+silverStatisticsPeas.VolumeNumber	 	 = R\u00E9partition des publications
+silverStatisticsPeas.VolumeDocsNumber	 	 = R\u00E9partition des fichiers joints
 silverStatisticsPeas.FromSpace	 	 	 = de l'espace
 silverStatisticsPeas.AttachmentsNumber	 	 = Nombre de fichiers joints
 silverStatisticsPeas.AttachmentsSize	 	 = Taille des fichiers joints
-silverStatisticsPeas.VolumeDocsSize	 	 = Taille occupée par les fichiers joints
-silverStatisticsPeas.Frequence	 	 	 = Type de fréquence
+silverStatisticsPeas.VolumeDocsSize	 	 = Taille occup\u00E9e par les fichiers joints
+silverStatisticsPeas.Frequence	 	 	 = Type de fr\u00E9quence
 silverStatisticsPeas.AttachmentsTotalSize	 = Evolution de la taille des fichiers joints
-silverStatisticsPeas.EvolutionAttachmentsTotalSize = Evolution de la taille occupée par les fichiers joints
-silverStatisticsPeas.Historique                  = Historique évolution
-silverStatisticsPeas.Access                  	 = Accès
-silverStatisticsPeas.EvolutionAccessDeb 	 = Historique évolution des accès
-silverStatisticsPeas.EvolutionAccessSpace 	 = à l'espace
+silverStatisticsPeas.EvolutionAttachmentsTotalSize = Evolution de la taille occup\u00E9e par les fichiers joints
+silverStatisticsPeas.Historique                  = Historique \u00E9volution
+silverStatisticsPeas.Access                  	 = Acc\u00E8s
+silverStatisticsPeas.EvolutionAccessDeb 	 = Historique \u00E9volution des acc\u00E8s
+silverStatisticsPeas.EvolutionAccessSpace 	 = \u00E0 l'espace
 silverStatisticsPeas.EvolutionAccessService 	 = au service
 silverStatisticsPeas.EvolutionAccessGroup 	 = du groupe
 silverStatisticsPeas.EvolutionAccessUser 	 = de l'utilisateur
@@ -71,7 +71,7 @@ silverStatisticsPeas.ClearUserPanelPeas 	 = Effacer filtre
 silverStatisticsPeas.GraphConnections 	 	 = Graphique
 silverStatisticsPeas.For	 	 	 = pour
 silverStatisticsPeas.January	 	 	 = Janv.
-silverStatisticsPeas.February	 	 	 = Fév.
+silverStatisticsPeas.February	 	 	 = F\u00E9v.
 silverStatisticsPeas.March	 	 	 = Mars
 silverStatisticsPeas.April	 	 	 = Avr.
 silverStatisticsPeas.May	 	 	 = Mai
@@ -81,10 +81,10 @@ silverStatisticsPeas.August	 	 	 = Aout
 silverStatisticsPeas.September	 	 	 = Sept.
 silverStatisticsPeas.October	 	 	 = Oct.
 silverStatisticsPeas.November	 	 	 = Nov.
-silverStatisticsPeas.December	 	 	 = Déc.
+silverStatisticsPeas.December	 	 	 = D\u00E9c.
 silverStatisticsPeas.From	 	 	 = de
 silverStatisticsPeas.FromAprilAugustOctober	 = d'
-silverStatisticsPeas.To	 	 	 	 = à
+silverStatisticsPeas.To	 	 	 	 = \u00E0
 silverStatisticsPeas.OfGroup	 	 	 = du groupe
 silverStatisticsPeas.OfUser	 	 	 = de l'utilisateur
 silverStatisticsPeas.Times	 	 	 = fois
