--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties
@@ -21,70 +21,71 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// agenda
+
+# agenda
 agenda = Mon agenda 
 
-// affichage
+# affichage
 jour = Jour 
 semaine = Semaine 
 mois = Mois 
-annee = Année
+annee = Ann\u00E9e
 
-// invitations
+# invitations
 listeInvitations = Liste des invitations
 
-// Liste de diffusion
+# Liste de diffusion
 listeDiffusion = Liste des participants
 listeDiffusionVide = Aucun 
 editionListeDiffusion =  Inviter des participants
 listeUtilisateurs = Utilisateurs 
-tentative = N'a pas répondu
+tentative = N'a pas r\u00E9pondu
 accepted = Participera
 declined = Ne participera pas
 participations = Invitations
-participationstentative = Non répondu
-participationsaccepted = Accepté
-participationsdeclined = Refusé
+participationstentative = Non r\u00E9pondu
+participationsaccepted = Accept\u00E9
+participationsdeclined = Refus\u00E9
 accepterInvitation = Accepter
 refuserInvitation = Refuser
 
-// Categories
+# Categories
 categories = Rubriques 
 listeCategories = Liste des rubriques
 listeCategoriesVide = Aucune 
 categoriesDispo = Rubriques disponibles
-editionCategories = Sélectionner des rubriques
+editionCategories = S\u00E9lectionner des rubriques
 toutesCategories = Toutes 
 
-// Classification
+# Classification
 classification = Type 
 public = Publique 
-private = Privée 
+private = Priv\u00E9e
 confidential = Confidentielle
 
-// priorite
-priorite = Priorité 
-priorite0 = Indéfinie
+# priorite
+priorite = Priorit\u00E9
+priorite0 = Ind\u00E9finie
 priorite1 = Haute
 priorite2 = Moyenne
 priorite3 = Basse
 
-// Operation
+# Operation
 fermer = Fermer 
-nouvelleNote = Nouvel événement
-confirmationSuppressionNote = Etes-vous sûr de vouloir supprimer l'événement
-ajouterNote = Nouvel événement
+nouvelleNote = Nouvel \u00E9v\u00E9nement
+confirmationSuppressionNote = Etes-vous s\u00FBr de vouloir supprimer l'\u00E9v\u00E9nement
+ajouterNote = Nouvel \u00E9v\u00E9nement
 ajouter = Ajouter 
 supprimer = Supprimer 
 mettreAJour = Valider
-retourAgenda = Retour à l'agenda
+retourAgenda = Retour \u00E0 l'agenda
 retour = Retour
 ajoutOk = Ajout OK
-majOk = Mise à jour OK
+majOk = Mise \u00E0 jour OK
 suppressionOk = Suppression OK
 supprimerNote = Supprimer 
 modifierListeDiffusion = Modifier 
-trouverCreneau = Trouver une disponibilité
+trouverCreneau = Trouver une disponibilit\u00E9
 modifierCategories = Modifier les rubriques
 afficherCalendrier = Afficher le calendrier
 mettreAJour = Valider 
@@ -92,24 +93,24 @@ annuler = Annuler
 retour = Retour 
 valider = Valider 
 
-// attribut note
-editerNote = Edition d'un évènement
+# attribut note
+editerNote = Edition d'un \u00E9v\u00E8nement
 organisateurNote = Organisateur
 nomNote = Nom 
 descriptionNote = Description 
-dateDebutNote = Date de début 
-heureDebutNote = Heure de début
+dateDebutNote = Date de d\u00E9but
+heureDebutNote = Heure de d\u00E9but
 dateFinNote = Date de fin 
 heureFinNote = Heure de fin
-sansHoraireSpecifique = Journée entière
+sansHoraireSpecifique = Journ\u00E9e enti\u00E8re
 mandatoryFields = Obligatoire 
 
-// navigation
-precedent = Précédent 
+# navigation
+precedent = Pr\u00E9c\u00E9dent
 suivant = Suivant 
 aujourdhui = Aujourd'hui
 
-// jour
+# jour
 weekFirstDay = 2
 weekLastDay = 1
 
@@ -129,101 +130,101 @@ jour6 = Vendredi
 jour7 = Samedi
 jour1 = Dimanche
 
-// mois
+# mois
 mois0 = Janvier
-mois1 = Février
+mois1 = F\u00E9vrier
 mois2 = Mars
 mois3 = Avril
 mois4 = Mai
 mois5 = Juin
 mois6 = Juillet
-mois7 = Août
+mois7 = Ao\u00FBt
 mois8 = Septembre
 mois9 = Octobre
 mois10 = Novembre
-mois11 = Décembre
+mois11 = D\u00E9cembre
 
-// erreur
+# erreur
 utilisateurInconnu = Utilisateur inconnu
 saisieErreur = Erreur de saisie :
-dateDebutErreur = Saisir correctement la date de début (par ex. : 01/09/2000)
+dateDebutErreur = Saisir correctement la date de d\u00E9but (par ex. : 01/09/2000)
 dateFinIncorrecte = Saisir correctement la date de fin (par ex. : 01/09/2000)
 nameErreur = Vous devez indiquer le nom
 organisateurErreur = Vous devez indiquer l'organisateur
-dateFinErreur = La date de début doit précéder la date de fin
-heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de début
-heureDebutErreur = Vous devez indiquer l'heure de début s'il y a une heure de fin
-heureFinAvantDebutErreur = La date de fin doit succéder la date de début
+dateFinErreur = La date de d\u00E9but doit pr\u00E9c\u00E9der la date de fin
+heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de d\u00E9but
+heureDebutErreur = Vous devez indiquer l'heure de d\u00E9but s'il y a une heure de fin
+heureFinAvantDebutErreur = La date de fin doit succ\u00E9der la date de d\u00E9but
 champsTropLong = Champs description trop long !
 TheField = le champ 
-MustContainsText = doit être renseigné 
-ContainsTooLargeText = ne doit pas excéder 
+MustContainsText = doit \u00EAtre renseign\u00E9
+ContainsTooLargeText = ne doit pas exc\u00E9der
 NbMaxTextArea = 2000 
-Characters = caractères
+Characters = caract\u00E8res
 MustContainsCorrectDate = doit contenir une date correcte 
-MustContainsPostDateToBeginDate = doit contenir une date postérieure à la date de début 
-MustContainsPostHourToBeginHour = doit contenir une heure postérieure à l'heure de début 
+MustContainsPostDateToBeginDate = doit contenir une date post\u00E9rieure \u00E0 la date de d\u00E9but
+MustContainsPostHourToBeginHour = doit contenir une heure post\u00E9rieure \u00E0 l'heure de d\u00E9but
 ThisFormContains = Attention, ce formulaire contient 
 Error = erreur 
 Errors = erreurs 
 
-// RDV
+# RDV
 NewRDV = Nouveau RDV
-NewRDVcalled = vous fixe un nouveau rendez-vous intitulé
+NewRDVcalled = vous fixe un nouveau rendez-vous intitul\u00E9
 JourRDV = le
-HeureRDV = à
-ThanksToConfirm = Merci de confirmer ou non votre présence
+HeureRDV = \u00E0
+ThanksToConfirm = Merci de confirmer ou non votre pr\u00E9sence
 
-//Agenda sharing
+# Agenda sharing
 viewOtherAgenda = Voir l'agenda d'un utilisateur 
-viewCurrentAgenda = Revenir à votre agenda
-privateEvent = (Privé)
+viewCurrentAgenda = Revenir \u00E0 votre agenda
+privateEvent = (Priv\u00E9)
 userAgenda = Agenda de <b> * </b>
 agenda.userAgenda = Agenda de *
 busy = Non disponible
-privateEventLabel = Privé
+privateEventLabel = Priv\u00E9
 publicEventLabel = Publique
-allDay = Toute la journée
+allDay = Toute la journ\u00E9e
 
-//permalink
+#permalink
 agenda.CopyAgendaLink = Pour copier le lien vers l'agenda de cet utilisateur : cliquer droit puis copier l'adresse du lien
 
-agenda.importSettings = Paramètrer l'importation Outlook
+agenda.importSettings = Param\u00E8trer l'importation Outlook
 agenda.outlookImportOptions = Importation Outlook
 agenda.synchroType = Importation
 agenda.outlookSynchro = MS Outlook
 agenda.notesSynchro = Lotus Notes
 agenda.noSynchro = Pas d'importation
-agenda.synchroDelay = Périodicité
+agenda.synchroDelay = P\u00E9riodicit\u00E9
 agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
-//Notifications
+#Notifications
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitulé
+subject = Votre rendez-vous intitul\u00E9
 with = avec
-delayed = a été décalé le
-planned = prévu le
-removed = a été supprimé. 
+delayed = a \u00E9t\u00E9 d\u00E9cal\u00E9 le
+planned = pr\u00E9vu le
+removed = a \u00E9t\u00E9 supprim\u00E9.
 
-//Rss
+#Rss
 agenda.agenda = Agenda
-agenda.rssNext = Prochains événements
-agenda.rssPrivateEvent = Evénement privé
+agenda.rssNext = Prochains \u00E9v\u00E9nements
+agenda.rssPrivateEvent = Ev\u00E9nement priv\u00E9
 
 # Import/Export/Synchro Ical
 agenda.ExportIcalCalendar = Exporter au format iCal
 agenda.ExportInProgress = Exportation en cours...
-agenda.ExportSucceeded = Exportation réussie...
-agenda.ExportEmpty = Aucun évènement à exporter...
+agenda.ExportSucceeded = Exportation r\u00E9ussie...
+agenda.ExportEmpty = Aucun \u00E9v\u00E8nement \u00E0 exporter...
 
 agenda.ImportIcalCalendar = Importer un fichier iCal
 agenda.ImportInProgress = Importation en cours...
-agenda.ImportSucceeded = Importation réussie...
-agenda.ImportFailed = L'importation a échouée.
-agenda.ImportEmpty = Aucun évènement à importer...
-agenda.ImportFileCalendar = Fichier iCalendar à importer (*.ics) :
+agenda.ImportSucceeded = Importation r\u00E9ussie...
+agenda.ImportFailed = L'importation a \u00E9chou\u00E9e.
+agenda.ImportEmpty = Aucun \u00E9v\u00E8nement \u00E0 importer...
+agenda.ImportFileCalendar = Fichier iCalendar \u00E0 importer (*.ics) :
 agenda.ImportBadFile = Ce fichier n'est pas un fichier iCal.
 
 agenda.SynchroIcalCalendar = Importer depuis un agenda distant iCalendar
@@ -231,12 +232,12 @@ agenda.SynchroRemoteUrl = URL de l'agenda distant :
 agenda.SynchroRssUrl = Flux RSS de l'agenda distant
 agenda.SynchroRemoteLogin = Login :
 agenda.SynchroRemotePwd = Mot de passe :
-agenda.SynchroCharset = Jeu de caractères :
+agenda.SynchroCharset = Jeu de caract\u00E8res :
 agenda.SynchroInProgress = Importation en cours...
 
-agenda.SynchroFailed = La synchronisation a échouée.
-agenda.SynchroSucceeded = Synchronisation réussie.
-agenda.Subscribe = Lien d'accès privé à cet agenda 
+agenda.SynchroFailed = La synchronisation a \u00E9chou\u00E9e.
+agenda.SynchroSucceeded = Synchronisation r\u00E9ussie.
+agenda.Subscribe = Lien d'acc\u00E8s priv\u00E9 \u00E0 cet agenda
 
-agenda.ChooseDaysOff = Sélection des jours 
-agenda.DaysOffSilver = non travaillés
+agenda.ChooseDaysOff = S\u00E9lection des jours
+agenda.DaysOffSilver = non travaill\u00E9s
