partially closing feature #301. Adding search criteria based on last modification date. Simplifying implementation of search (Lucene's query construction and using of RangeQuery to manage based-date filters).
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1363 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -134,8 +134,9 @@ pdcPeas.SortValueSearch.5 = Location
 pdcPeas.DomainSelect = Workspace:
 pdcPeas.ComponentSelect = Service:
 pdcPeas.AuthorSelect = Publisher:
-pdcPeas.AfterDate = After 
-pdcPeas.BeforeDate = Before 
+pdcPeas.CreateAfterDate = Published after :
+pdcPeas.UpdateAfterDate = Updated after :
+pdcPeas.BeforeDate = and/or before :
 pdcPeas.NoResult = No Results.
 pdcPeas.OneResult = Only one result.
 pdcPeas.OneResultPage =  document found
