--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -134,8 +134,9 @@ pdcPeas.SortValueSearch.5 = Emplacement
 pdcPeas.DomainSelect = Espace :
 pdcPeas.ComponentSelect = Service :
 pdcPeas.AuthorSelect = Publieur :
-pdcPeas.AfterDate = Après le 
-pdcPeas.BeforeDate = Avant le 
+pdcPeas.CreateAfterDate = Publié après le :
+pdcPeas.UpdateAfterDate = Modifié après le :
+pdcPeas.BeforeDate = et/ou avant le :
 pdcPeas.NoResult = Aucune réponse
 pdcPeas.OneResult = Une seule réponse trouvée.
 pdcPeas.OneResultPage =  réponses trouvées
