Related to feature #301, adding new sort criteria (last update). Simplifying sort implementation in PdcSearchSessionController.java.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1371 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -125,7 +125,8 @@ pdcPeas.SortValueSearch.1 = Relevanz
 pdcPeas.SortValueSearch.2 = Titel
 pdcPeas.SortValueSearch.3 = Autor
 pdcPeas.SortValueSearch.4 = Datum
-pdcPeas.SortValueSearch.5 = Standort
+pdcPeas.SortValueSearch.5 = Last update date
+pdcPeas.SortValueSearch.6 = Standort
 pdcPeas.DomainSelect = Bereich:
 pdcPeas.ComponentSelect = Dienst:
 pdcPeas.AuthorSelect = Herausgeber:
