--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -129,8 +129,9 @@ pdcPeas.SortResultSearch = sorting by:
 pdcPeas.SortValueSearch.1 = Relevance
 pdcPeas.SortValueSearch.2 = Title
 pdcPeas.SortValueSearch.3 = Author
-pdcPeas.SortValueSearch.4 = Date
-pdcPeas.SortValueSearch.5 = Location
+pdcPeas.SortValueSearch.4 = Creation date
+pdcPeas.SortValueSearch.5 = Last update date
+pdcPeas.SortValueSearch.6 = Location
 pdcPeas.DomainSelect = Workspace:
 pdcPeas.ComponentSelect = Service:
 pdcPeas.AuthorSelect = Publisher:
