--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -129,8 +129,9 @@ pdcPeas.SortResultSearch = triés par :
 pdcPeas.SortValueSearch.1 = Pertinence
 pdcPeas.SortValueSearch.2 = Titre
 pdcPeas.SortValueSearch.3 = Auteur
-pdcPeas.SortValueSearch.4 = Date
-pdcPeas.SortValueSearch.5 = Emplacement
+pdcPeas.SortValueSearch.4 = Date de création
+pdcPeas.SortValueSearch.5 = Date de modification
+pdcPeas.SortValueSearch.6 = Emplacement
 pdcPeas.DomainSelect = Espace :
 pdcPeas.ComponentSelect = Service :
 pdcPeas.AuthorSelect = Publieur :
