closing feature #320 Add Facet search grouping feature.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1395 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -273,3 +273,7 @@ pdcPeas.Axe = Axis
 pdcPeas.selectAll=Select all
 
 pdcpeas.didYouMean= Did You mean  :
+
+# Facet group search message
+pdcPeas.group.tooltip.enable= Click to show only '{0}' results.
+pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results.
