--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -267,3 +267,7 @@ pdcPeas.Axe = Axe
 pdcPeas.selectAll=Tout sélectionner
 
 pdcpeas.didYouMean= Essayez avec cette orthographe :
+
+# Facet group search message
+pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur "{0}".
+pdcPeas.group.tooltip.disable= Cliquer pour supprimer l\'affinage sur "{0}".
