--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -257,3 +257,7 @@ pdcPeas.choiceForm = Sie m\u00FCssen ein Formular ausw\u00E4hlen
 pdcPeas.Axe = Achse
 
 pdcPeas.selectAll=Alles ausw\u00E4hlen
+
+# Facet group search message
+pdcPeas.group.tooltip.enable= Click to show only '{0}' results.
+pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results.
