Feature #320 Improve search filter graphical user interface.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1400 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -269,5 +269,5 @@ pdcPeas.selectAll=Tout sélectionner
 pdcpeas.didYouMean= Essayez avec cette orthographe :
 
 # Facet group search message
-pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur "{0}".
-pdcPeas.group.tooltip.disable= Cliquer pour supprimer l\'affinage sur "{0}".
+pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}.
+pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}.
